--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="pagination">
       <button id="loadMoreButton" type="button">
-        Load More
+        Load 
       </button>
     </div>
   </section>
